Added Ajax Layout

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,6 +27,10 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/"
 ; Add namespace so the autoloader knows where to look for library directories
 autoLoaderNamespaces[] = "Application"
 
+; Plugins
+autoloaderNamespaces[] = "Plugin_"
+resources.frontController.plugins.AjaxCheck = "Plugin_AjaxCheck"
+
 resources.frontController.params.displayExceptions = 1
 
 ; DB Details
