--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -53,3 +53,7 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+; Debugging
+debug.allow = true;
+debug.filePath = APPLICATION_PATH "/../public/logs"
