--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -34,13 +34,13 @@ resources.frontController.plugins.AjaxCheck = "Plugin_AjaxCheck"
 resources.frontController.params.displayExceptions = 1
 
 ; DB Details
-;resources.db.adapter = "PDO_MYSQL"
-;resources.db.isdefaulttableadapter = true
-;resources.db.params.dbname = "db_name"
-;resources.db.params.username = "db_user"
-;resources.db.params.password = "mypassword"
-;resources.db.params.hostname = "localhost"
-;resources.db.params.charset = "UTF8"
+resources.db.adapter = "PDO_MYSQL"
+resources.db.isdefaulttableadapter = true
+resources.db.params.dbname = "web-tools"
+resources.db.params.username = "root"
+resources.db.params.password = ""
+resources.db.params.hostname = "localhost"
+resources.db.params.charset = "UTF8"
 	
 
 [staging : production]
@@ -57,3 +57,12 @@ resources.frontController.params.displayExceptions = 1
 ; Debugging
 debug.allow = true;
 debug.filePath = APPLICATION_PATH "/../public/logs"
+
+; DB Details
+resources.db.adapter = "PDO_MYSQL"
+resources.db.isdefaulttableadapter = true
+resources.db.params.dbname = "web-tools"
+resources.db.params.username = "root"
+resources.db.params.password = ""
+resources.db.params.hostname = "localhost"
+resources.db.params.charset = "UTF8"
