Updated Error Handling

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -17,7 +17,7 @@ resources.modules[] =
 ; Modules default Action Controller
 resources.frontController.defaultControllerName = "index"
 resources.frontController.defaultAction = "index"
-resources.frontController.defaultModule = "login"
+resources.frontController.defaultModule = "home"
 resources.frontController.prefixDefaultModule = false
 
 ; Layout Directory
@@ -29,8 +29,7 @@ autoLoaderNamespaces[] = "Application"
 
 ; Plugins
 autoloaderNamespaces[] = "Plugin_"
-resources.frontController.plugins.AjaxCheck = "Plugin_AjaxCheck"
-
+resources.frontController.plugins.PreDispatchCheck = "Plugin_PreDispatchCheck"
 resources.frontController.params.displayExceptions = 1
 
 ; DB Details
@@ -63,6 +62,6 @@ resources.db.adapter = "PDO_MYSQL"
 resources.db.isdefaulttableadapter = true
 resources.db.params.dbname = "web-tools"
 resources.db.params.username = "root"
-resources.db.params.password = ""
+resources.db.params.password = "admin"
 resources.db.params.hostname = "localhost"
 resources.db.params.charset = "UTF8"
