--- a/application/configs/routing.ini
+++ b/application/configs/routing.ini
@@ -23,6 +23,12 @@ routes.linkedin_follow.defaults.action = follow
 
 [login]
 ; If want to pass some parameters via get
+routes.index.route = "login/index"
+routes.index.defaults.module = login
+routes.index.defaults.controller = index
+routes.index.defaults.action = index
+
+; If want to pass some parameters via get
 routes.user.route = "login/user/:username/:password"
 routes.user.defaults.module = login
 routes.user.defaults.controller = index
@@ -38,8 +44,18 @@ routes.error.defaults.controller = index
 routes.error.defaults.action = index
 routes.error.defaults.params.error = 404
 
+routes.index.route = "error/index/:error"
+routes.index.defaults.module = error
+routes.index.defaults.controller = index
+routes.index.defaults.action = index
+
 [home]
 routes.home.route = "/"
 routes.home.defaults.module = home
 routes.home.defaults.controller = index
 routes.home.defaults.action = index
+
+routes.index.route = "home/index"
+routes.index.defaults.module = home
+routes.index.defaults.controller = index
+routes.index.defaults.action = index
